[package]
name = "sf6_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sf6_rsz_parser = { git = "https://github.com/WistfulHopes/sf6_rsz_parser.git" }
eframe = "0.21.3"
rfd = { git = "https://github.com/PolyMeilex/rfd.git" }