[package]
name = "sf6_sim"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sf6_rsz_parser = { git = "https://github.com/WistfulHopes/sf6_rsz_parser.git" }
eframe = "0.22"
rfd = { git = "https://github.com/PolyMeilex/rfd.git" }
bitvec = { git = "https://github.com/ferrilab/bitvec.git" }
bitflags = "2.3.2"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"